--- a/DasmotoArt/index.html
+++ b/DasmotoArt/index.html
@@ -25,7 +25,7 @@
 
     <div id="brushes">
       <img src="./resources/hacksaw.jpeg" alt="hacksaw brushes">
-      <h2 id="one">Brushes</h2>
+      <h2>Brushes</h2>
         <h3>Hacksaw Brushes</h3>
         <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes.
           <span class="price"> Starting at &#36;3.00 per brush</span></p>
@@ -33,7 +33,7 @@
 
     <div id="frames">
       <img src="./resources/frames.jpeg" alt="frames">
-      <h2 id="two">Frames</h2>
+      <h2>Frames</h2>
         <h3>Art Frames (assorted)</h3>
         <p>Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs.
         <span class="price"> Starting at &#36;2.00 per frame</span></p>
@@ -41,7 +41,7 @@
 
     <div id="paint">
       <img src="./resources/finnish.jpeg" alt="finnish paint">
-      <h2 id="three">Paint</h2>
+      <h2>Paint</h2>
         <h3>Clean Finnish Paint</h3>
         <p>Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork.<span class="price"> Starting at &#36;5.00 per tube</p>
     </div>
