--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dasmoto's Arts &amp; Crafts</title>
-    <link href="./resources/style.css" style="text/css" rel="stylesheet">
+    <link href="resources/style.css" style="text/css" rel="stylesheet">
   </head>
   <body>
 
